force-app/main/default/objects/Creditsafe_Company_Employee_Information__c/Creditsafe_Company_Employee_Information__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyEmployeeInformationV2</description>
    <label>Creditsafe Company Employee Information</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company Employee Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Employee Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>