force-app/main/default/objects/Creditsafe_Company_Employee_Information__c/fields/Creditsafe_Company_Report_Full__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Report_Full__c</fullName>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report Full</label>
    <referenceTo>Creditsafe_Company_Report_Full__c</referenceTo>
    <relationshipLabel>Employee Informations</relationshipLabel>
    <relationshipName>Employee_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>