force-app/main/default/objects/Creditsafe_Company_Employee_Information__c/fields/Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Employees__c</fullName>
    <description>Number of staff that the company employ directly.</description>
    <label>Number Of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>