force-app/main/default/objects/Creditsafe_Company_Employee_Information__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year that the figures were reordered.</description>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>